--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -2,16 +2,32 @@
 
     nav {
         margin-bottom: 1rem;
+        font-family: $font-secondary;
     }
 
-    background-image: url(https://images.pexels.com/photos/39853/woman-girl-freedom-happy-39853.jpeg?cs=srgb&dl=dawn-sunset-beach-woman-39853.jpg&fm=jpg);
+    p {
+        font-size: 1.8rem;
+    }
+
+    font-family: $font-primary;
+    color: #fff;
+
+    background: linear-gradient(270deg, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1)),
+    url("https://images.pexels.com/photos/1381679/pexels-photo-1381679.jpeg?cs=srgb&dl=close-up-photo-of-purple-lilac-flowers-1381679.jpg&fm=jpg");
+    background-position: bottom;
+    background-size: cover;
 
     padding: 1rem 2rem 4rem;
-    
+
     .btn-outline-secondary {
         color: #fff;
         border: 1px solid #fff;
         margin-left: 1rem;
+
+        &:hover {
+            background-color: #fff;
+            color: black;
+        }
     }
 }
 
@@ -21,17 +37,22 @@
 
 
 #about-section {
-    
+
     .section-a {
         margin: auto;
     }
 
+    h1 {
+        font-family: $font-primary;
+        font-size: 4rem;
+    }
+
     .about-img {
-        width: 90%;
-        
+        width: 80%;
+
         @include respond(tab-land) {
-                margin-bottom: 2rem;
-            }
+            margin-bottom: 2rem;
+        }
     }
 
 
@@ -49,11 +70,12 @@
         padding-top: 3rem;
 
         &__name {
+            font-family: $font-secondary;
             float: right;
             position: relative;
             top: 1.8rem;
             right: .5rem;
-            font-size: 1.5rem;
+            font-size: 1.8rem;
         }
     }
 
@@ -75,16 +97,25 @@
 #home-icon-section {
 
     @include background-right;
-    text-align: center;
 
     .border-line {
         border-bottom: 1px solid white;
         margin: 3rem 26rem;
     }
-    
+
     @include respond(tab-land) {
-                padding: 0 5rem;
-            }
+        padding: 0 5rem;
+    }
+
+    .header {
+        font-size: 2.4rem;
+    }
+
+    h2,
+    h3 {
+        text-align: center;
+        font-family: $font-primary;
+    }
 
     h4 {
         font-size: 1.2rem;
@@ -106,6 +137,7 @@
         background-color: $color-primary;
         border: none;
         text-transform: uppercase;
+        padding: 1rem 2rem;
 
         @include respond(tab-port) {
             margin-bottom: 2rem;
@@ -118,46 +150,62 @@
 #next-step {
 
     text-align: center;
-    color: white;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("https://images.pexels.com/photos/985266/pexels-photo-985266.jpeg?cs=srgb&dl=close-up-photo-of-blue-petaled-flowers-985266.jpg&fm=jpg");
+    color: #333;
+    //    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("https://images.pexels.com/photos/985266/pexels-photo-985266.jpeg?cs=srgb&dl=close-up-photo-of-blue-petaled-flowers-985266.jpg&fm=jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+
+    font-family: $font-primary;
+
+    h2 {
+        font-size: 2.4rem;
+    }
 
 
     button {
         padding: .8rem 2rem;
         margin-right: 2rem;
         text-transform: uppercase;
+
+        @include respond(phone) {
+            margin-right: 0;
+        }
+
     }
 
     .btn-outline-secondary {
-        color: white;
-        border: 2px solid white;
+        color: #333;
+        border: 2px solid #333;
+
+        &:hover {
+            color: #fff;
+            background-color: #333;
+        }
     }
 
 
 }
 
 
-#testimonials-section {
-
-    padding: 0 8rem;
-    text-align: center;
-    font-size: 1.6rem;
-    line-height: 2rem;
-    
-    @include respond(tab-land) {
-                padding: 0;
-            }
-
-    .testimonial-name {
-        color: $color-primary;
-        font-size: 1.5rem;
-    }
-
-
-}
+//#testimonials-section {
+//
+//    padding: 0 8rem;
+//    text-align: center;
+//    font-size: 1.6rem;
+//    line-height: 2rem;
+//    
+//    @include respond(tab-land) {
+//                padding: 0;
+//            }
+//
+//    .testimonial-name {
+//        color: $color-primary;
+//        font-size: 1.5rem;
+//    }
+//
+//
+//}
 
 #contact-section {
 
@@ -204,29 +252,29 @@
     button {
         padding: 1rem 2rem;
         border-radius: 1rem;
-        
+
         @include respond(phone) {
-                margin-bottom: 2rem;
-            }
+            margin-bottom: 2rem;
+        }
     }
-    
+
     .footer-links {
-        
+
         @include respond(phone) {
-                text-align: center;
-            }
+            text-align: center;
+        }
     }
 
     .social {
-        
+
         text-align: right;
         margin: auto 0;
         font-size: 1.5rem;
-        
+
         @include respond(phone) {
-                text-align: center;
-            }
-        
+            text-align: center;
+        }
+
 
         & a {
             color: #fff;
@@ -237,28 +285,15 @@
             }
         }
     }
-    
+
     p {
         color: silver;
-        
+
         @include respond(phone) {
-                text-align: center;
-            }
+            text-align: center;
+        }
     }
-    
-    
+
+
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
