--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -18,6 +18,11 @@
     background-size: cover;
 
     padding: 1rem 2rem 4rem;
+    
+    button {
+        text-transform: uppercase;
+        padding: .7rem 1.5rem;
+    }
 
     .btn-outline-secondary {
         color: #fff;
@@ -182,30 +187,41 @@
             color: #fff;
             background-color: #333;
         }
+        
+        a {
+            color: inherit;
+
+        }
     }
 
 
 }
 
 
-//#testimonials-section {
-//
-//    padding: 0 8rem;
-//    text-align: center;
-//    font-size: 1.6rem;
-//    line-height: 2rem;
-//    
-//    @include respond(tab-land) {
-//                padding: 0;
-//            }
-//
-//    .testimonial-name {
-//        color: $color-primary;
-//        font-size: 1.5rem;
-//    }
-//
-//
-//}
+#external-section {
+
+    padding: 0 10rem;
+    text-align: center;
+    font-size: 1.6rem;
+    line-height: 1.9rem;
+    
+    @include respond(tab-land) {
+                padding: 0;
+            }
+
+    .external-name {
+        color: $color-primary;
+        font-size: 1.5rem;
+        margin-bottom: 1.6rem;
+    }
+    
+    button {
+        padding: .7rem 1.5rem;
+        text-transform: uppercase;
+    }
+
+
+}
 
 #contact-section {
 
