--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,8 +1,18 @@
 .main-header {
+    
+    @include respond(iphone) {
+            text-align: center;
+        }
 
     nav {
         margin-bottom: 1rem;
         font-family: $font-secondary;
+    }
+    
+    h1 {
+            @include respond(iphone) {
+            font-size: 3rem;
+        }
     }
 
     p {
@@ -22,7 +32,14 @@
     button {
         text-transform: uppercase;
         padding: .7rem 1.5rem;
+        }
+    
+    .btn-warning {
+        @include respond(iphone) {
+            margin-bottom: 1rem;
+        }
     }
+        
 
     .btn-outline-secondary {
         color: #fff;
@@ -34,6 +51,7 @@
             color: black;
         }
     }
+    
 }
 
 
@@ -62,7 +80,7 @@
 
 
     .lead {
-        margin-bottom: 0
+        margin-bottom: 0;
     }
 
     ;
@@ -73,6 +91,10 @@
         text-align: center;
         padding: 2rem 4rem;
         padding-top: 3rem;
+        
+        .lead {
+            font-size: 1.3rem;
+        }
 
         &__name {
             font-family: $font-secondary;
@@ -111,6 +133,10 @@
     @include respond(tab-land) {
         padding: 0 5rem;
     }
+    
+        @include respond(phone) {
+            padding: 0;
+        }
 
     .header {
         font-size: 2.4rem;
@@ -231,7 +257,7 @@
     background-size: cover;
 
     h1 {
-        font-size: 3rem;
+        font-size: 2.6rem;
     }
 
     .text-grey {
