--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,16 +1,16 @@
 .main-header {
-    
+
     @include respond(iphone) {
-            text-align: center;
-        }
+        text-align: center;
+    }
 
     nav {
         margin-bottom: 1rem;
         font-family: $font-secondary;
     }
-    
+
     h1 {
-            @include respond(iphone) {
+        @include respond(iphone) {
             font-size: 3rem;
         }
     }
@@ -28,18 +28,18 @@
     background-size: cover;
 
     padding: 1rem 2rem 4rem;
-    
+
     button {
         text-transform: uppercase;
         padding: .7rem 1.5rem;
-        }
-    
+    }
+
     .btn-warning {
         @include respond(iphone) {
             margin-bottom: 1rem;
         }
     }
-        
+
 
     .btn-outline-secondary {
         color: #fff;
@@ -51,7 +51,7 @@
             color: black;
         }
     }
-    
+
 }
 
 
@@ -91,7 +91,7 @@
         text-align: center;
         padding: 2rem 4rem;
         padding-top: 3rem;
-        
+
         .lead {
             font-size: 1.3rem;
         }
@@ -130,13 +130,9 @@
         margin: 3rem 26rem;
     }
 
-    @include respond(tab-land) {
-        padding: 0 5rem;
+    @include respond(tab-port) {
+        padding: 0;
     }
-    
-        @include respond(phone) {
-            padding: 0;
-        }
 
     .header {
         font-size: 2.4rem;
@@ -213,7 +209,7 @@
             color: #fff;
             background-color: #333;
         }
-        
+
         a {
             color: inherit;
 
@@ -230,17 +226,17 @@
     text-align: center;
     font-size: 1.6rem;
     line-height: 1.9rem;
-    
+
     @include respond(tab-land) {
-                padding: 0;
-            }
+        padding: 0;
+    }
 
     .external-name {
         color: $color-primary;
         font-size: 1.5rem;
         margin-bottom: 1.6rem;
     }
-    
+
     button {
         padding: .7rem 1.5rem;
         text-transform: uppercase;
