--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ ORDER: Base + > page layout > components
     font-family: "Dancing Script", cursive; }
   @media only screen and (max-width: 30.8125rem) {
     .main-header h1 {
-      font-size: 3rem; } }
+      font-size: 2.3rem; } }
   .main-header p {
     font-size: 1.8rem; }
   .main-header button {
@@ -154,7 +154,8 @@ ORDER: Base + > page layout > components
     padding: 1rem 2rem; }
     @media only screen and (max-width: 48rem) {
       #home-icon-section button {
-        margin-bottom: 2rem; } }
+        margin-bottom: 2rem;
+        margin-top: 1rem; } }
 
 #next-step {
   text-align: center;
